<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtName"
            android:layout_gravity="center"
            android:textColor="#c5c9"
            android:textStyle="bold"
            android:textSize="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp">
            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/txtuser"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp">
            <EditText
                android:id="@+id/txtPw"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/txtpassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/btnLogin"
                />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>